versão 1.5.0 (add cors e axios)
